# portfolio

./: .env.example  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/certifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/certifications/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/mail/: serializers.py  urls.py  views.py
backend/projects/: admin.py  models.py  serializers.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py
backend/utils/management/commands/: create_superuser_if_missing.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: About.jsx  Certification.jsx  Contact.jsx  Header.jsx  Hero.jsx  Projects.jsx
frontend/src/components/cards/: Card.jsx  CredentialCard.jsx
frontend/src/hooks/: useWindowSize.jsx
